[gd_scene load_steps=21 format=3 uid="uid://bk2ayfcf7osys"]

[ext_resource type="PackedScene" uid="uid://cpu2psp3r768g" path="res://Scenes/health_component.tscn" id="1_e75tj"]
[ext_resource type="Script" path="res://Enemies/Scenes/enemy_mage.gd" id="1_ylq4h"]
[ext_resource type="Texture2D" uid="uid://kr7ltncnw4g2" path="res://Assets/mageenemyspritesheet.png" id="2_b7lg6"]
[ext_resource type="Resource" uid="uid://ctqu0uehdrjct" path="res://Enemies/Repo/mage.tres" id="2_fw421"]
[ext_resource type="Texture2D" uid="uid://d0e48hvkb4dlg" path="res://Assets/mageBullet.png" id="5_slgoi"]
[ext_resource type="AudioStream" uid="uid://dgi3qcr486fce" path="res://Assets/Sounds/hitHurt.wav" id="7_2dmge"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqxve"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_f7kyn"]
atlas = ExtResource("2_b7lg6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kf07"]
atlas = ExtResource("2_b7lg6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfdar"]
atlas = ExtResource("2_b7lg6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmj7v"]
atlas = ExtResource("2_b7lg6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_be5ef"]
atlas = ExtResource("2_b7lg6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x34vr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7kyn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kf07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfdar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmj7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be5ef")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5uax5"]
resource_name = "mageDeath"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 3), Vector2(20, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_euwqx"]
resource_name = "mageHurt1"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.602945, 0, 0.0891975, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5gww5"]
resource_name = "mageHurt2"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.602945, 0, 0.0891975, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cfw83"]
_data = {
"mageDeath": SubResource("Animation_5uax5"),
"mageHurt1": SubResource("Animation_euwqx"),
"mageHurt2": SubResource("Animation_5gww5")
}

[sub_resource type="Curve" id="Curve_2wjk1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.663507, 0.538462), -2.11706, -2.11706, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kqifc"]
curve = SubResource("Curve_2wjk1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mikl4"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 20.0
emission_ring_inner_radius = 16.0
angle_max = 181.5
angular_velocity_min = -720.0
angular_velocity_max = 720.0
radial_velocity_min = -3.85
radial_velocity_max = 3.7
gravity = Vector3(0, 0, 0)
radial_accel_min = -100.0
radial_accel_max = -50.0
scale_curve = SubResource("CurveTexture_kqifc")
turbulence_enabled = true

[node name="EnemyMage" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ylq4h")
enemy = ExtResource("2_fw421")
fleeRange = 300.0
projectileSpeed = 1400.0
shotsPerShot = 5
shotSpread = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 2.475)
shape = SubResource("CircleShape2D_aqxve")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1, 2.525)
shape = SubResource("CircleShape2D_aqxve")

[node name="HealthComponent" parent="." instance=ExtResource("1_e75tj")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x34vr")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.128548

[node name="FireRate" type="Timer" parent="."]
wait_time = 2.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cfw83")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_mikl4")
texture = ExtResource("5_slgoi")
lifetime = 4.0
one_shot = true
speed_scale = 1.99

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2dmge")
volume_db = -20.0
max_polyphony = 1000
bus = &"sfx"

[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
